[gd_scene load_steps=26 format=3 uid="uid://2wab3q35ssta"]

[ext_resource type="Texture2D" uid="uid://d3rhl050u0ahl" path="res://assets/menus/login/password_background.png" id="1_mw5cp"]
[ext_resource type="Script" path="res://sources/menus/login/login.gd" id="1_spyuf"]
[ext_resource type="PackedScene" uid="uid://wdjp1sv55q4f" path="res://sources/menus/night_sky/night_sky.tscn" id="3_0my6t"]
[ext_resource type="PackedScene" uid="uid://blos4rn53qkwg" path="res://sources/minigames/base/kalulu.tscn" id="3_5b1v0"]
[ext_resource type="Texture2D" uid="uid://wtx3wqs0l4si" path="res://assets/minigames/minigame_ui/graphic/button_back_up.png" id="4_3vuah"]
[ext_resource type="Texture2D" uid="uid://cbhip35yyqneg" path="res://assets/minigames/minigame_ui/graphic/button_back_down.png" id="5_vd33f"]
[ext_resource type="Texture2D" uid="uid://tcapan0mj64o" path="res://assets/minigames/minigame_ui/graphic/button_back_disabled.png" id="6_0dhup"]
[ext_resource type="Texture2D" uid="uid://iw84x6mx8h2g" path="res://assets/minigames/minigame_ui/graphic/button_kalulu_up.png" id="7_2wdoi"]
[ext_resource type="Texture2D" uid="uid://ub1dnysbojn8" path="res://assets/minigames/minigame_ui/graphic/button_kalulu_down.png" id="8_nxlxw"]
[ext_resource type="Texture2D" uid="uid://b4xm8a5y2lf3h" path="res://assets/menus/login/button_teacher_1.png" id="9_7lscf"]
[ext_resource type="Texture2D" uid="uid://crnxawhf68po3" path="res://assets/minigames/minigame_ui/graphic/button_kalulu_disabled.png" id="9_k74e3"]
[ext_resource type="Texture2D" uid="uid://de8087qre3hqd" path="res://assets/menus/login/button_symbol01_up.png" id="10_kigl0"]
[ext_resource type="Texture2D" uid="uid://g2igusggq16s" path="res://assets/menus/login/button_teacher_0.png" id="10_ro1l5"]
[ext_resource type="Texture2D" uid="uid://ce2dk2so7yo85" path="res://assets/menus/login/button_symbol01_down.png" id="11_fs1ex"]
[ext_resource type="Texture2D" uid="uid://cq6ctjti7nroe" path="res://assets/menus/login/button_symbol02_up.png" id="12_ygmrs"]
[ext_resource type="Texture2D" uid="uid://cghxguj0vdhx7" path="res://assets/menus/login/button_symbol02_down.png" id="13_ghp6c"]
[ext_resource type="Texture2D" uid="uid://bxrtewrqlop6h" path="res://assets/menus/login/button_symbol03_up.png" id="14_ap24d"]
[ext_resource type="Texture2D" uid="uid://da7g76llxx8t5" path="res://assets/menus/login/button_symbol03_down.png" id="15_wh2p6"]
[ext_resource type="Texture2D" uid="uid://bh7toiwhvln0v" path="res://assets/menus/login/button_symbol04_up.png" id="16_5ip8d"]
[ext_resource type="Texture2D" uid="uid://c6od4ikuean3f" path="res://assets/menus/login/button_symbol04_down.png" id="17_876tw"]
[ext_resource type="Texture2D" uid="uid://d18rbiborhmow" path="res://assets/menus/login/button_symbol05_up.png" id="18_6ncp7"]
[ext_resource type="Texture2D" uid="uid://ch87nxu2c0vf8" path="res://assets/menus/login/button_symbol05_down.png" id="19_ty7yo"]
[ext_resource type="Texture2D" uid="uid://eg5jrfombxb8" path="res://assets/menus/login/button_symbol06_up.png" id="20_xaifc"]
[ext_resource type="Texture2D" uid="uid://dce53jiyk6gy6" path="res://assets/menus/login/button_symbol06_down.png" id="21_banah"]
[ext_resource type="AudioStream" uid="uid://b85wy2h7fmvvf" path="res://assets/menus/login/intro_title_card.mp3" id="24_4xfja"]

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_spyuf")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_mw5cp")

[node name="NightSky" parent="." instance=ExtResource("3_0my6t")]
visible = false
layout_mode = 1

[node name="InterfaceLeft" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(450, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="Container" type="VBoxContainer" parent="InterfaceLeft"]
layout_mode = 2

[node name="BackButton" type="TextureButton" parent="InterfaceLeft/Container"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
texture_normal = ExtResource("4_3vuah")
texture_pressed = ExtResource("5_vd33f")
texture_disabled = ExtResource("6_0dhup")
stretch_mode = 4

[node name="KaluluButton" type="TextureButton" parent="InterfaceLeft/Container"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("7_2wdoi")
texture_pressed = ExtResource("8_nxlxw")
texture_disabled = ExtResource("9_k74e3")
stretch_mode = 4

[node name="InterfaceRight" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(450, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -450.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="TeacherButton" type="TextureButton" parent="InterfaceRight"]
custom_minimum_size = Vector2(0, 140)
layout_mode = 2
size_flags_vertical = 8
texture_normal = ExtResource("9_7lscf")
texture_pressed = ExtResource("10_ro1l5")
stretch_mode = 5

[node name="TeacherTimer" type="Timer" parent="InterfaceRight/TeacherButton"]
wait_time = 5.0

[node name="Icons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -676.0
offset_top = -565.0
offset_right = 676.0
offset_bottom = -145.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 46

[node name="1" type="TextureRect" parent="Icons"]
custom_minimum_size = Vector2(420, 420)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
stretch_mode = 5

[node name="2" type="TextureRect" parent="Icons"]
custom_minimum_size = Vector2(420, 420)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="3" type="TextureRect" parent="Icons"]
custom_minimum_size = Vector2(420, 420)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Buttons" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.203125
anchor_top = 0.573333
anchor_right = 0.796875
anchor_bottom = 0.96
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 25
columns = 2
metadata/_edit_use_anchors_ = true

[node name="1" type="TextureButton" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("10_kigl0")
texture_pressed = ExtResource("11_fs1ex")
stretch_mode = 5

[node name="2" type="TextureButton" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("12_ygmrs")
texture_pressed = ExtResource("13_ghp6c")
stretch_mode = 5

[node name="3" type="TextureButton" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("14_ap24d")
texture_pressed = ExtResource("15_wh2p6")
stretch_mode = 5

[node name="4" type="TextureButton" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("16_5ip8d")
texture_pressed = ExtResource("17_876tw")
stretch_mode = 5

[node name="5" type="TextureButton" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("18_6ncp7")
texture_pressed = ExtResource("19_ty7yo")
stretch_mode = 5

[node name="6" type="TextureButton" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("20_xaifc")
texture_pressed = ExtResource("21_banah")
stretch_mode = 5

[node name="Kalulu" parent="." instance=ExtResource("3_5b1v0")]
visible = false
layout_mode = 1

[node name="MusicStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("24_4xfja")

[connection signal="pressed" from="InterfaceLeft/Container/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="InterfaceLeft/Container/KaluluButton" to="." method="_on_kalulu_button_pressed"]
[connection signal="button_down" from="InterfaceRight/TeacherButton" to="." method="_on_teacher_button_button_down"]
[connection signal="button_up" from="InterfaceRight/TeacherButton" to="." method="_on_teacher_button_button_up"]
[connection signal="timeout" from="InterfaceRight/TeacherButton/TeacherTimer" to="." method="_on_teacher_timer_timeout"]
